# GmSSL-Android

./: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
GmSSL3/: .gitignore  build.gradle  maven_push.gradle
GmSSL3/src/main/cpp/: CMakeLists.txt
GmSSL3/src/main/cpp/gmssl_lib/: CMakeLists.txt
GmSSL3/src/main/cpp/gmssl_lib/include/gmssl/: digest.h  pbkdf2.h  pem.h  pkcs8.h  sdf.h  skf.h  sm2.h  sm9.h  tls.h  version.h  x509.h  x509_alg.h  x509_cer.h  x509_crl.h  x509_ext.h  x509_req.h
GmSSL3/src/main/cpp/gmssl_lib/src/: aead.c  aes.c  aes_modes.c  asn1.c  base64.c  block_cipher.c  chacha20.c  cms.c  debug.c  digest.c  ec.c  file.c  gcm.c  gf128.c  hash_drbg.c  hex.c  hkdf.c  hmac.c  http.c  pbkdf2.c  pem.c  pkcs8.c  rand.c  rsa.c  sha256.c  sha512.c  sm2_alg.c  sm2_key.c  sm2_lib.c  sm3.c  sm3_hmac.c  sm3_kdf.c  sm4_enc.c  sm4_lcl.h  sm4_modes.c  sm4_setkey.c  sm9_alg.c  sm9_key.c  sm9_lib.c  socket.c  (+15 more)
GmSSL3/src/main/cpp/gmssl_lib/src/sdf/: sdf.c  sdf_ext.c  sdf_int.h  sdf_meth.c
GmSSL3/src/main/cpp/gmssl_lib/src/skf/: skf.c  skf_int.h  skf_meth.c  skf_prn.c
GmSSL3/src/main/cpp/gmssl_lib/tools/: certgen.c  certparse.c  certrevoke.c  certverify.c  cmsdecrypt.c  cmsencrypt.c  cmsparse.c  cmssign.c  cmsverify.c  crlgen.c  crlget.c  crlparse.c  crlverify.c  pbkdf2.c  rand.c  reqgen.c  reqparse.c  reqsign.c  sdfutil.c  skfutil.c  sm2decrypt.c  sm2encrypt.c  sm2keygen.c  sm2sign.c  sm2verify.c  sm3.c  sm3hmac.c  sm4.c  sm9decrypt.c  sm9encrypt.c  sm9keygen.c  sm9setup.c  sm9sign.c  sm9verify.c  tlcp_client.c  tlcp_server.c  tls12_client.c  tls12_server.c  tls13_client.c  tls13_server.c  (+2 more)
GmSSL3/src/main/java/org/gmssl/: GmSSLJNI.java
app/: build.gradle.kts
app/src/androidTest/java/com/hl/gmssl/android/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: ROOTCA.pem  sm2.pem  sm2pub.pem
app/src/main/java/com/hl/gmssl/android/: MainActivity.kt
app/src/main/java/com/hl/gmssl/android/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/hl/gmssl/android/: ExampleUnitTest.kt
commonGradle/: gradle_config_optimize.gradle
commonGradle/maven-publish/: module_maven_publish_apply.gradle  publish_config.gradle
gradle/wrapper/: gradle-wrapper.properties
